--- a/app/src/main/res/layout/activity_part_list.xml
+++ b/app/src/main/res/layout/activity_part_list.xml
@@ -23,15 +23,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hi 1"></TextView>
-                <TextView
+                    android:text="Product Name: "></TextView>
+                <EditText
+                    android:id="@+id/editProductName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hi 2"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hi 3"></TextView>
+                    android:hint=""></EditText>
+
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,11 +38,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hi 4"></TextView>
-                <TextView
+                    android:text="Product Price: "></TextView>
+                <EditText
+                    android:id="@+id/"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hi 5"></TextView>
+                    android:text="Hi 5"></EditText>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
