--- a/app/src/main/res/layout/activity_part_list.xml
+++ b/app/src/main/res/layout/activity_part_list.xml
@@ -8,9 +8,12 @@
 
     <ScrollView
         android:layout_width="409dp"
-        android:layout_height="20dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="100dp">
+        tools:layout_editor_absoluteY="100dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +31,7 @@
                     android:id="@+id/editProductName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint=""></EditText>
+                    android:hint="Tricycle"></EditText>
 
             </LinearLayout>
             <LinearLayout
@@ -40,32 +43,18 @@
                     android:layout_height="wrap_content"
                     android:text="Product Price: "></TextView>
                 <EditText
-                    android:id="@+id/"
+                    android:id="@+id/editProductPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hi 5"></EditText>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hi 6"></TextView>
+                    android:hint="10.00"></EditText>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
+            <Button
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hi 7"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hi 8"></TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hi 9"></TextView>
-        </LinearLayout>
+                android:text="Save"
+                android:clickable="true"
+                android:onClick="saveButton"
+                />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
