--- a/app/src/main/res/layout/activity_product_list_item.xml
+++ b/app/src/main/res/layout/activity_product_list_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="@color/black"
+        android:background="@color/cardview_light_background"
         android:text="TextView"
         tools:layout_editor_absoluteX="183dp"
         tools:layout_editor_absoluteY="227dp"
