--- a/app/src/main/res/layout/activity_part_list.xml
+++ b/app/src/main/res/layout/activity_part_list.xml
@@ -46,7 +46,7 @@
                     android:id="@+id/editProductPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="10.00"></EditText>
+                    android:hint="$10.00"></EditText>
             </LinearLayout>
             <Button
                 android:layout_width="wrap_content"
