--- a/app/src/main/res/layout/activity_part_list.xml
+++ b/app/src/main/res/layout/activity_part_list.xml
@@ -7,6 +7,7 @@
     tools:context=".UI.PartList">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="409dp"
         android:layout_height="200dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -57,4 +58,15 @@
                 />
         </LinearLayout>
     </ScrollView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview2"
+        android:layout_width="409dp"
+        android:layout_height="529dp"
+        android:background="@color/purple_200"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="201dp"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
