working on notifications

--- a/app/src/main/res/layout/activity_part_detail.xml
+++ b/app/src/main/res/layout/activity_part_detail.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".UI.PartDetail">
 
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Date" />
+
+        <EditText
+            android:id="@+id/editTextDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="11/07/22" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
